# KOmni-SSH

./: .gitignore  CMakeLists.txt  komni-ssh.desktop  komni-ssh.spec
Support_Documents/: omni-ssh.conf  omni-ssh.sh
src/: ConfigManager.cpp  ConfigManager.h  ConnectionManager.cpp  ConnectionManager.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  komni-ssh_de.ts  komni-ssh_fr.ts  komni-ssh_zh.ts  main.cpp  resources.qrc
src/translations/: komni-ssh_de.qm  komni-ssh_fr.qm  komni-ssh_zh.qm
